<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".AddVoitureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/idMarque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMarque" />

            <Spinner
                android:id="@+id/editMarque"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center"
                >

            </Spinner>

            <TextView
                android:id="@+id/idModele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtModele" />

            <EditText
                android:id="@+id/idEditModele"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idImmat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtImmat" />

            <EditText
                android:id="@+id/idEditImmat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAnnee" />

            <EditText
                android:id="@+id/idEditAnnee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idCouleur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCouleur" />

            <EditText
                android:id="@+id/idEditCouleur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <TextView
                android:id="@+id/idCarburant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCarburant" />

            <EditText
                android:id="@+id/idEditCarburant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idPuissance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPuissance" />

            <EditText
                android:id="@+id/idEditPuissance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="number" />

            <TextView
                android:id="@+id/idPortes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPorte" />

            <EditText
                android:id="@+id/idEditPortes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtStyle" />

            <EditText
                android:id="@+id/idEditStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <TextView
                android:id="@+id/idDispo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDispo" />

            <RadioGroup
                android:id="@+id/radioGroupDispo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonOui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Oui" />

                <RadioButton
                    android:id="@+id/radioButtonNon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Non" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTarif" />

            <EditText
                android:id="@+id/idEditTarif"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtEuro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEtat" />

            <RadioGroup
                android:id="@+id/radioGroupEtat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonBon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEtatBon" />

                <RadioButton
                    android:id="@+id/radioButtonMoyen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEtatMoyen"
                    />

                <RadioButton
                    android:id="@+id/radioButtonMauvais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEtatMauvais" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAgence" />

            <EditText
                android:id="@+id/txtAgence"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/validerVoiture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#de3c41"
                android:onClick="onClickAjouterVoiture"
                android:text="@string/btnAjoutVoiture" />

        </LinearLayout>







    </LinearLayout>


</LinearLayout>